[gd_scene load_steps=3 format=3 uid="uid://bthttbflpfnxd"]

[ext_resource type="Script" path="res://scripts/bridge_plank_area.gd" id="1_yic1u"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qr8q5"]
size = Vector2(19.537, 24.5935)

[node name="bridge_plank_area" type="Area2D"]
script = ExtResource("1_yic1u")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -2.29673)
shape = SubResource("RectangleShape2D_qr8q5")

[node name="first pin timer" type="Timer" parent="."]
one_shot = true

[node name="second pin timer" type="Timer" parent="."]
wait_time = 0.75
one_shot = true

[node name="delete timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="timeout" from="first pin timer" to="." method="_on_first_pin_timer_timeout"]
[connection signal="timeout" from="second pin timer" to="." method="_on_second_pin_timer_timeout"]
[connection signal="timeout" from="delete timer" to="." method="_on_delete_timer_timeout"]
